--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -770,6 +770,8 @@ services:
 
   # The nginx reverse proxy.
   # used for reverse proxying the API service and Web service.
+# 在docker-compose.yaml中，找到nginx服务并修改为：
+
   nginx:
     image: nginx:latest
     restart: always
@@ -779,8 +781,8 @@ services:
       - ./nginx/https.conf.template:/etc/nginx/https.conf.template
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./nginx/docker-entrypoint.sh:/docker-entrypoint-mount.sh
-      - ./nginx/ssl:/etc/ssl # cert dir (legacy)
-      - ./volumes/certbot/conf/live:/etc/letsencrypt/live # cert dir (with certbot container)
+      - ./nginx/ssl:/etc/ssl
+      - ./volumes/certbot/conf/live:/etc/letsencrypt/live
       - ./volumes/certbot/conf:/etc/letsencrypt
       - ./volumes/certbot/www:/var/www/html
     entrypoint: [ 'sh', '-c', "cp /docker-entrypoint-mount.sh /docker-entrypoint.sh && sed -i 's/\r$$//' /docker-entrypoint.sh && chmod +x /docker-entrypoint.sh && /docker-entrypoint.sh" ]
@@ -789,8 +791,6 @@ services:
       NGINX_HTTPS_ENABLED: ${NGINX_HTTPS_ENABLED:-false}
       NGINX_SSL_PORT: ${NGINX_SSL_PORT:-443}
       NGINX_PORT: ${NGINX_PORT:-80}
-      # You're required to add your own SSL certificates/keys to the `./nginx/ssl` directory
-      # and modify the env vars below in .env if HTTPS_ENABLED is true.
       NGINX_SSL_CERT_FILENAME: ${NGINX_SSL_CERT_FILENAME:-dify.crt}
       NGINX_SSL_CERT_KEY_FILENAME: ${NGINX_SSL_CERT_KEY_FILENAME:-dify.key}
       NGINX_SSL_PROTOCOLS: ${NGINX_SSL_PROTOCOLS:-TLSv1.1 TLSv1.2 TLSv1.3}
@@ -804,9 +804,23 @@ services:
     depends_on:
       - api
       - web
-    ports:
-      - '${EXPOSE_NGINX_PORT:-80}:${NGINX_PORT:-80}'
-      - '${EXPOSE_NGINX_SSL_PORT:-443}:${NGINX_SSL_PORT:-443}'
+    labels:
+      # Traefik 标签配置
+      - "traefik.enable=true"
+      - "traefik.http.routers.dify.rule=Host(`${DIFY_DOMAIN:-dify.statkit.xyz}`)"
+      - "traefik.http.routers.dify.entrypoints=websecure"
+      - "traefik.http.routers.dify.tls.certresolver=letsencrypt"
+      - "traefik.http.services.dify.loadbalancer.server.port=80"
+      # 可选：添加HTTP重定向到HTTPS
+      - "traefik.http.routers.dify-http.rule=Host(`${DIFY_DOMAIN:-dify.statkit.xyz}`)"
+      - "traefik.http.routers.dify-http.entrypoints=web"
+      - "traefik.http.routers.dify-http.middlewares=redirect-to-https"
+      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
+      - "traefik.http.middlewares.redirect-to-https.redirectscheme.permanent=true"
+    # 注意：去掉 ports 配置，使用Traefik代理
+    # ports:
+    #   - '${EXPOSE_NGINX_PORT:-80}:${NGINX_PORT:-80}'
+    #   - '${EXPOSE_NGINX_SSL_PORT:-443}:${NGINX_SSL_PORT:-443}'
 
   # The Weaviate vector store.
   weaviate:
